<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuizPracticeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textViewQuizName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuizName" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProgress">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/word"
                android:text="WORD"
                android:textSize="25dp"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>



        <edu.gatech.seclass.sdpvocabquiz.ui.SelectableCardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_answer_1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginBottom="10dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/info_text_answer_1"
                android:text="Answer 1"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </edu.gatech.seclass.sdpvocabquiz.ui.SelectableCardView>



        <edu.gatech.seclass.sdpvocabquiz.ui.SelectableCardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_answer_2"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginBottom="10dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/info_text_answer_2"
                android:text="Answer 2"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </edu.gatech.seclass.sdpvocabquiz.ui.SelectableCardView>



        <edu.gatech.seclass.sdpvocabquiz.ui.SelectableCardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_answer_3"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/info_text_answer_3"
                android:text="Answer 3"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </edu.gatech.seclass.sdpvocabquiz.ui.SelectableCardView>



        <edu.gatech.seclass.sdpvocabquiz.ui.SelectableCardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_answer_4"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/info_text_answer_4"
                android:text="Answer 4"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </edu.gatech.seclass.sdpvocabquiz.ui.SelectableCardView>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>