<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newWordLayout"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:scaleType="center"
        android:background="#00574B"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/newWord"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="4dp"
        android:hint="New Word" />

    <EditText
        android:id="@+id/definition"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
...
