<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_add"
        android:title="Add Quiz"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_black_24dp" />
    <item android:id="@+id/menu_delete"
        android:title="Delete Quiz"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_black_24dp" />
</menu>
